tests/snapshots/bootstrap_snapshot__mutual_bootstrap_bails.snap
---
source: tests/bootstrap_snapshot.rs
expression: capture
---
direction A -> B
control item 0 (30 bytes) / preamble /
55799_1([
    "rumors",
    2,
    h'00000000000000000000000000000000',
    0,
])
control item 1 (103 bytes) / greeting /
24_0(<<{
    "listing": {},
    "set_len": 0,
    "version": 53846_1(h'e0'),
    "max_version_bytes": 0,
    "payload_depth_limit": 256_1,
    "target_message_size": 1830400_2,
}>>)
control item 2 (2 bytes) / epilogue /
"."

direction B -> A
control item 0 (30 bytes) / preamble /
55799_1([
    "rumors",
    2,
    h'00000000000000000000000000000000',
    0,
])
control item 1 (103 bytes) / greeting /
24_0(<<{
    "listing": {},
    "set_len": 0,
    "version": 53846_1(h'e0'),
    "max_version_bytes": 0,
    "payload_depth_limit": 256_1,
    "target_message_size": 1830400_2,
}>>)
control item 2 (2 bytes) / epilogue /
"."
