tests/snapshots/bootstrap_snapshot__populated_provider.snap
---
source: tests/bootstrap_snapshot.rs
expression: capture_bootstrap(provider)
---
direction A -> B
role: Responder
control item 0 (30 bytes) / preamble /
55799_1([
    "rumors",
    2,
    h'b2f7f581d6de3c06a822fd6e7e8265fb',
    0,
])
control item 1 (187 bytes) / greeting /
24_0(<<{
    "listing": {
        30_0: h'873255e39c6ccc1019916b8d5c5eb211a991ea504acd727d',
        130_0: h'ad151bc8bfcf8e311bf94802769422676fec3e83d495d637',
        142_0: h'1b5c7a2a860aa40597f61b26a1d3d54b48591068e45aed32',
    },
    "set_len": 3,
    "version": 53846_1(h'92'),
    "max_version_bytes": 1,
    "payload_depth_limit": 256_1,
    "target_message_size": 1830400_2,
}>>)
control item 2 (5 bytes) / party hand-off /
53845_1(h'48')
control item 3 (2 bytes) / epilogue /
"."
Responder stream 0 (height 31), epoch 0, 50 wire bytes
  frame 0 (15 bytes) / Supply(Continue) /
[0, 6, 63_0(<<63_0(<<53846_1(h'92'), 3>>)>>)]
  frame 1 (15 bytes) / Supply(Continue) /
[0, 6, 63_0(<<63_0(<<53846_1(h'b8'), 2>>)>>)]
  frame 2 (15 bytes) / Supply(End) /
[0, 7, 63_0(<<63_0(<<53846_1(h'a8'), 1>>)>>)]
  frame 3 (3 bytes) / End(Stream) /
[0, 9]

direction B -> A
role: Initiator
control item 0 (30 bytes) / preamble /
55799_1([
    "rumors",
    2,
    h'00000000000000000000000000000000',
    0,
])
control item 1 (103 bytes) / greeting /
24_0(<<{
    "listing": {},
    "set_len": 0,
    "version": 53846_1(h'e0'),
    "max_version_bytes": 0,
    "payload_depth_limit": 256_1,
    "target_message_size": 1830400_2,
}>>)
control item 2 (2 bytes) / epilogue /
"."
