tests/snapshots/bootstrap_snapshot__string_payload.snap
---
source: tests/bootstrap_snapshot.rs
expression: capture_bootstrap(provider)
---
direction A -> B
role: Responder
control item 0 (30 bytes) / preamble /
55799_1([
    "rumors",
    2,
    h'b2f7f581d6de3c06a822fd6e7e8265fb',
    0,
])
control item 1 (159 bytes) / greeting /
24_0(<<{
    "listing": {
        130_0: h'ad151bc8bfcf8e311bf94802769422676fec3e83d495d637',
        142_0: h'1b5c7a2a860aa40597f61b26a1d3d54b48591068e45aed32',
    },
    "set_len": 2,
    "version": 53846_1(h'b8'),
    "max_version_bytes": 1,
    "payload_depth_limit": 256_1,
    "target_message_size": 1830400_2,
}>>)
control item 2 (5 bytes) / party hand-off /
53845_1(h'48')
control item 3 (2 bytes) / epilogue /
"."
Responder stream 0 (height 31), epoch 0, 45 wire bytes
  frame 0 (20 bytes) / Supply(Continue) /
[0, 6, 63_0(<<63_0(<<53846_1(h'b8'), "world">>)>>)]
  frame 1 (20 bytes) / Supply(End) /
[0, 7, 63_0(<<63_0(<<53846_1(h'a8'), "hello">>)>>)]
  frame 2 (3 bytes) / End(Stream) /
[0, 9]

direction B -> A
role: Initiator
control item 0 (30 bytes) / preamble /
55799_1([
    "rumors",
    2,
    h'00000000000000000000000000000000',
    0,
])
control item 1 (103 bytes) / greeting /
24_0(<<{
    "listing": {},
    "set_len": 0,
    "version": 53846_1(h'e0'),
    "max_version_bytes": 0,
    "payload_depth_limit": 256_1,
    "target_message_size": 1830400_2,
}>>)
control item 2 (2 bytes) / epilogue /
"."
