tests/snapshots/bootstrap_snapshot__v1_populated_provider.snap
---
source: tests/bootstrap_snapshot.rs
expression: capture
---
party A                         │ party B
─────────────────────────────── │ ───────────────────────────────
sent 25 bytes                   │ sent 25 bytes
  0000: 52 55 4d 4f 52 53 00 01 │   0000: 52 55 4d 4f 52 53 00 01
  0008: 8c 18 96 68 c9 e4 83 72 │   0008: 00 00 00 00 00 00 00 00
  0010: 37 bf 31 e0 2d 7f 6b 70 │   0010: 00 00 00 00 00 00 00 00
  0018: 00                      │   0018: 00
received 25 bytes               │ received 25 bytes
  0000: 52 55 4d 4f 52 53 00 01 │   0000: 52 55 4d 4f 52 53 00 01
  0008: 00 00 00 00 00 00 00 00 │   0008: 8c 18 96 68 c9 e4 83 72
  0010: 00 00 00 00 00 00 00 00 │   0010: 37 bf 31 e0 2d 7f 6b 70
  0018: 00                      │   0018: 00
sent 5 bytes                    │ sent 5 bytes
  0000: 00 00 00 01 92          │   0000: 00 00 00 01 e0
received 13 bytes               │ received 5 bytes
  0000: 00 00 00 01 e0 00 00 00 │   0000: 00 00 00 01 92
  0008: 04 00 00 00 00          │ sent 8 bytes
sent 83 bytes                   │   0000: 00 00 00 04 00 00 00 00
  0000: 00 00 00 4f 03 00 00 00 │ received 83 bytes
  0008: 09 7c a8 b0 7c b2 82 54 │   0000: 00 00 00 4f 03 00 00 00
  0010: 10 9e b3 f8 96 75 cd b2 │   0008: 09 7c a8 b0 7c b2 82 54
  0018: 2a b6 88 2b 6a b3 1b 3c │   0010: 10 9e b3 f8 96 75 cd b2
  0020: df a0 b7 e9 9b 38 1b a2 │   0018: 2a b6 88 2b 6a b3 1b 3c
  0028: cb 4d 2f 4f ef 62 4e d0 │   0020: df a0 b7 e9 9b 38 1b a2
  0030: 66 74 d9 e0 a3 67 d0 52 │   0028: cb 4d 2f 4f ef 62 4e d0
  0038: 72 d6 c4 bf a8 f5 9b 4a │   0030: 66 74 d9 e0 a3 67 d0 52
  0040: 41 4e 53 35 b1 c4 a3 23 │   0038: 72 d6 c4 bf a8 f5 9b 4a
  0048: b9 0c 6f a7 52 9b cf 7c │   0040: 41 4e 53 35 b1 c4 a3 23
  0050: a5 82 16                │   0048: b9 0c 6f a7 52 9b cf 7c
received 19 bytes               │   0050: a5 82 16
  0000: 00 00 00 0f 00 00 00 00 │ sent 19 bytes
  0008: 03 00 00 00 09 a0 c4 00 │   0000: 00 00 00 0f 00 00 00 00
  0010: 00 00 00                │   0008: 03 00 00 00 09 a0 c4 00
sent 147 bytes                  │   0010: 00 00 00
  0000: 00 00 00 8a 03 00 00 00 │ received 147 bytes
  0008: 09 a7 1e 00 8c 87 d8 5a │   0000: 00 00 00 8a 03 00 00 00
  0010: bd 97 aa 1c 42 c8 69 6e │   0008: 09 a7 1e 00 8c 87 d8 5a
  0018: d8 cc 4c 63 6d 30 7e 54 │   0010: bd 97 aa 1c 42 c8 69 6e
  0020: 99 86 d2 49 2c fa bf 87 │   0018: d8 cc 4c 63 6d 30 7e 54
  0028: 70 a8 01 00 00 00 00 00 │   0020: 99 86 d2 49 2c fa bf 87
  0030: 00 00 a0 bf 1e e4 4b a4 │   0028: 70 a8 01 00 00 00 00 00
  0038: 65 86 2a 5d 6f f9 1c e0 │   0030: 00 00 a0 bf 1e e4 4b a4
  0040: e3 b8 e0 57 06 a1 ca 17 │   0038: 65 86 2a 5d 6f f9 1c e0
  0048: be 7f 37 2f 64 7e c5 9d │   0040: e3 b8 e0 57 06 a1 ca 17
  0050: 04 dd 25 b8 02 00 00 00 │   0048: be 7f 37 2f 64 7e c5 9d
  0058: 00 00 00 00 c4 a3 1e 0d │   0050: 04 dd 25 b8 02 00 00 00
  0060: c3 e0 7d 4f ee a4 12 3e │   0058: 00 00 00 00 c4 a3 1e 0d
  0068: 57 c0 b4 0f bb ab 29 46 │   0060: c3 e0 7d 4f ee a4 12 3e
  0070: d7 9c 05 f2 17 df d2 68 │   0068: 57 c0 b4 0f bb ab 29 46
  0078: 95 5b 6a fa 3f 92 03 00 │   0070: d7 9c 05 f2 17 df d2 68
  0080: 00 00 00 00 00 00 00 00 │   0078: 95 5b 6a fa 3f 92 03 00
  0088: 00 00 00 00 00 00 00 00 │   0080: 00 00 00 00 00 00 00 00
  0090: 00 01 48                │   0088: 00 00 00 00 00 00 00 00
                                │   0090: 00 01 48
